general sibling selector adjacent sibling selector

--- a/seletores_css/assets/css/styles.css
+++ b/seletores_css/assets/css/styles.css
@@ -38,6 +38,7 @@
    .Pai > .Filha --> Seleciona todas as tags com classe filha que tem ligação
    direta com o pai
 
+    CONTINUAÇÃO NA SEGUNDA PASTA
 
 */
 * {
